fixed Marketplace case layout bug

--- a/UI/components/ChallengesAndSolutions/styles/marketplace-for-clairvoyant-services.scss
+++ b/UI/components/ChallengesAndSolutions/styles/marketplace-for-clairvoyant-services.scss
@@ -1,7 +1,29 @@
 .marketplace-for-clairvoyant-services {
   .contentContainer {
+    position: relative;
     max-width: 994px;
     margin-bottom: 7px;
+
+    &-1,
+    &-3 {
+      .imageBundle {
+        left: -100px;
+      }
+    }
+
+    &-2 {
+      .imageBundle {
+        right: -20px;
+      }
+    }
+  }
+
+  .imageBundle {
+    position: absolute;
+    top: 40px;
+    z-index: 1;
+    width: 530px;
+    height: 530px;
   }
 
   .infoContainer {
